[package]
name = "battery-notifications"
version = "0.2.0"
authors = ["Fang He <hf.enigma@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starship-battery = "0.7"
notify-rust = "4"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
