[package]
name = "battery-notifications"
version = "0.2.0"
authors = ["Fang He <hf.enigma@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udev = { version = "0.7", features = ["mio"] }
mio = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
