[package]
name = "battery-notifications"
version = "0.3.0"
authors = ["Fang He <hf.enigma@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udev = { version = "0.9", features = ["mio"] }
mio = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
